--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,6 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "jupyter>=1.1.1",
-    "pymupdf4llm>=0.0.17"
+    "pymupdf4llm>=0.0.17",
+    "tokenizers>=0.20.3",
 ]
