--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,12 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "duckdb>=1.1.3",
     "einops>=0.8.0",
     "jupyter>=1.1.1",
     "pymupdf4llm>=0.0.17",
     "semantic-text-splitter>=0.18.1",
     "semchunk>=2.2.0",
+    "sentence-transformers>=3.3.0",
     "tokenizers>=0.20.3",
 ]
