--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "duckdb>=1.1.3",
     "einops>=0.8.0",
     "jupyter>=1.1.1",
+    "pandas>=2.2.3",
     "pymupdf4llm>=0.0.17",
     "semantic-text-splitter>=0.18.1",
     "semchunk>=2.2.0",
